Fix margins on book sections desktop. Fix buttons and narrator bio on mobile

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -707,6 +707,14 @@ textarea:focus-visible {
 }
 
 @media only screen and (max-width: 767px) {
+  .audio_player {
+    width: 100%;
+  }
+
+  .narrator_bio_body {
+    width: 80%;
+  }
+
   .author_image {
     width: 100%;
     height: auto !important;
